Aid impl. start

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,28 @@
 {
+    "utils.mks.checkType.perception": "Perception",
+    "utils.mks.checkType.fortitude": "Fortitude",
+    "utils.mks.checkType.reflex": "Reflex",
+    "utils.mks.checkType.will": "Will",
+    "utils.mks.checkType.spell[arcane]": "Arcane Spellcasting",
+    "utils.mks.checkType.spell[occult]": "Occult Spellcasting",
+    "utils.mks.checkType.spell[primal]": "Primal Spellcasting",
+    "utils.mks.checkType.spell[divine]": "Divine Spellcasting",
+    "utils.mks.checkType.skill[acrobatics]": "Acrobatics",
+    "utils.mks.checkType.skill[arcana]": "Arcana",
+    "utils.mks.checkType.skill[athletics]": "Athletics",
+    "utils.mks.checkType.skill[crafting]": "Crafting",
+    "utils.mks.checkType.skill[deception]": "Deception",
+    "utils.mks.checkType.skill[diplomacy]": "Diplomacy",
+    "utils.mks.checkType.skill[intimidation]": "Intimidation",
+    "utils.mks.checkType.skill[medicine]": "Medicine",
+    "utils.mks.checkType.skill[nature]": "Nature",
+    "utils.mks.checkType.skill[occultism]": "Occultism",
+    "utils.mks.checkType.skill[performance]": "Performance",
+    "utils.mks.checkType.skill[religion]": "Religion",
+    "utils.mks.checkType.skill[society]": "Society",
+    "utils.mks.checkType.skill[stealth]": "Stealth",
+    "utils.mks.checkType.skill[survival]": "Survival",
+    "utils.mks.checkType.skill[thievery]": "Thievery",
     "utils.mks.warning.actor.onemustbeselected": "You must select exactly one actor!",
     "utils.mks.warning.actor.atleastonemustbeselected": "You must select at least one actor!",
     "utils.mks.warning.target.onemustbeselected": "You must target exactly one token!",
@@ -9,5 +33,6 @@
     "utils.mks.roll.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
     "utils.mks.roll.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
     "utils.mks.roll.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "utils.mks.roll.defaulttitle.dcpart": "DC [${dc}]"
+    "utils.mks.roll.defaulttitle.dcpart": "DC [${dc}]",
+    "actions.aid.ready.dialog.subject": ""
 }
