--- a/lang/en.json
+++ b/lang/en.json
@@ -30,13 +30,11 @@
     "utils.mks.warning.actor.atleastonemustbeselected": "You must select at least one actor!",
     "utils.mks.warning.target.onemustbeselected": "You must target exactly one token!",
     "utils.mks.warning.target.atleastonemustbeselected": "You must target at least one token!",
-    "utils.mks.skill.roll.check.defaulttitle.firstpart": "${actor.name} ${skill.label} Check",
-    "utils.mks.skill.roll.check.defaulttitle.dcpart": "DC [${dc}]",
-    "utils.mks.roll.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "utils.mks.roll.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
-    "utils.mks.roll.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
-    "utils.mks.roll.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "utils.mks.roll.defaulttitle.dcpart": "DC [${dc}]",
+    "utils.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+    "utils.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
+    "utils.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
+    "utils.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+    "utils.mks.check.defaulttitle.dcpart": "DC [${dc}]",
     "actions.aid.ready.dialog.title": "Ready Aid Reaction",
     "actions.aid.ready.dialog.select": "Select How To Aid:",
     "actions.aid.ready.dialog.yesaction": "Ready",
