--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,8 +1,43 @@
 {
-    "utils.mks.warning.actor.onemustbeselected": "Bir aktör seçmelisiniz!",
-    "utils.mks.warning.actor.atleastonemustbeselected": "En az bir aktör seçmelisiniz!",
-    "utils.mks.warning.target.onemustbeselected": "Bir hedef seçmelisiniz!",
-    "utils.mks.warning.target.atleastonemustbeselected": "En az bir hedef seçmelisiniz!",
-    "utils.mks.skill.roll.check.defaulttitle.firstpart": "${actor.name} ${skill.label} Atışı",
-    "utils.mks.skill.roll.check.defaulttitle.dcpart": "DC [${dc}]"
+    "pf2e.mks.ui.actions.cancel": "İptal",
+    "pf2e.mks.ui.actions.ok": "Tamam",
+    "pf2e.mks.checkType.perception": "Algılama - Perception",
+    "pf2e.mks.checkType.fortitude": "Direnç - Fortitude",
+    "pf2e.mks.checkType.reflex": "Refleks",
+    "pf2e.mks.checkType.will": "Azim - Will",
+    "pf2e.mks.checkType.spell[arcane]": "Esrar - Arcane Büyü",
+    "pf2e.mks.checkType.spell[occult]": "Kült - Occult Büyü",
+    "pf2e.mks.checkType.spell[primal]": "Özsel - Primal Büyü",
+    "pf2e.mks.checkType.spell[divine]": "Kutsal - Divine Büyü",
+    "pf2e.mks.checkType.skill[acrobatics]": "Akrobasi",
+    "pf2e.mks.checkType.skill[arcana]": "Esrar İlmi - Arcana",
+    "pf2e.mks.checkType.skill[athletics]": "Bielk Gücü - Athletics",
+    "pf2e.mks.checkType.skill[crafting]": "Ustalık - Crafting",
+    "pf2e.mks.checkType.skill[deception]": "Dalavere - Deception",
+    "pf2e.mks.checkType.skill[diplomacy]": "Diplomasi",
+    "pf2e.mks.checkType.skill[intimidation]": "Gözdağı - Intimidation",
+    "pf2e.mks.checkType.skill[medicine]": "Tıp - Medicine",
+    "pf2e.mks.checkType.skill[nature]": "Doğa - Nature",
+    "pf2e.mks.checkType.skill[occultism]": "Kültizm - Occultism",
+    "pf2e.mks.checkType.skill[performance]": "Performans",
+    "pf2e.mks.checkType.skill[religion]": "Dinler - Religion",
+    "pf2e.mks.checkType.skill[society]": "Toplum - Society",
+    "pf2e.mks.checkType.skill[stealth]": "Gizlilik - Stealth",
+    "pf2e.mks.checkType.skill[survival]": "Hayatta Kalma - Survival",
+    "pf2e.mks.checkType.skill[thievery]": "Hırsızlık - Thievery",
+    "pf2e.mks.checkType.strike": "Vuruş",
+    "pf2e.mks.warning.actor.onemustbeselected": "Bir piyon seçmelisiniz!",
+    "pf2e.mks.warning.actor.atleastonemustbeselected": "En az bir piyon seçmelisiniz!",
+    "pf2e.mks.warning.target.onemustbeselected": "Bir piyon hedeflemelisiniz!",
+    "pf2e.mks.warning.target.atleastonemustbeselected": "En az bir piyon hedeflemelisiniz!",
+    "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
+    "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
+    "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Büyü Atağı",
+    "pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
+    "pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
+    "pf2e.mks.dialog.aid.ready.title": "Yardımı Hazırla",
+    "pf2e.mks.dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
+    "pf2e.mks.dialog.aid.ready.yesaction": "Hazır",
+    "pf2e.mks.dialog.setdc.title": "DC Belirle",
+    "pf2e.mks.dc": "DC"
 }
