--- a/lang/en.json
+++ b/lang/en.json
@@ -1,43 +1,43 @@
 {
-    "utils.mks.ui.actions.cancel": "Cancel",
-    "utils.mks.ui.actions.ok": "OK",
-    "utils.mks.checkType.perception": "Perception",
-    "utils.mks.checkType.fortitude": "Fortitude",
-    "utils.mks.checkType.reflex": "Reflex",
-    "utils.mks.checkType.will": "Will",
-    "utils.mks.checkType.spell[arcane]": "Arcane Spellcasting",
-    "utils.mks.checkType.spell[occult]": "Occult Spellcasting",
-    "utils.mks.checkType.spell[primal]": "Primal Spellcasting",
-    "utils.mks.checkType.spell[divine]": "Divine Spellcasting",
-    "utils.mks.checkType.skill[acrobatics]": "Acrobatics",
-    "utils.mks.checkType.skill[arcana]": "Arcana",
-    "utils.mks.checkType.skill[athletics]": "Athletics",
-    "utils.mks.checkType.skill[crafting]": "Crafting",
-    "utils.mks.checkType.skill[deception]": "Deception",
-    "utils.mks.checkType.skill[diplomacy]": "Diplomacy",
-    "utils.mks.checkType.skill[intimidation]": "Intimidation",
-    "utils.mks.checkType.skill[medicine]": "Medicine",
-    "utils.mks.checkType.skill[nature]": "Nature",
-    "utils.mks.checkType.skill[occultism]": "Occultism",
-    "utils.mks.checkType.skill[performance]": "Performance",
-    "utils.mks.checkType.skill[religion]": "Religion",
-    "utils.mks.checkType.skill[society]": "Society",
-    "utils.mks.checkType.skill[stealth]": "Stealth",
-    "utils.mks.checkType.skill[survival]": "Survival",
-    "utils.mks.checkType.skill[thievery]": "Thievery",
-    "utils.mks.checkType.strike": "Strike",
-    "utils.mks.warning.actor.onemustbeselected": "You must select exactly one actor!",
-    "utils.mks.warning.actor.atleastonemustbeselected": "You must select at least one actor!",
-    "utils.mks.warning.target.onemustbeselected": "You must target exactly one token!",
-    "utils.mks.warning.target.atleastonemustbeselected": "You must target at least one token!",
-    "utils.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "utils.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
-    "utils.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
-    "utils.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "utils.mks.check.defaulttitle.dcpart": "DC [${dc}]",
-    "actions.aid.ready.dialog.title": "Ready Aid Reaction",
-    "actions.aid.ready.dialog.select": "Select How To Aid:",
-    "actions.aid.ready.dialog.yesaction": "Ready",
-    "actions.aid.setdc.dialog.title": "Set DC",
-    "actions.aid.setdc.dialog.dc": "DC"
+    "pf2e.mks.ui.actions.cancel": "Cancel",
+    "pf2e.mks.ui.actions.ok": "OK",
+    "pf2e.mks.checkType.perception": "Perception",
+    "pf2e.mks.checkType.fortitude": "Fortitude",
+    "pf2e.mks.checkType.reflex": "Reflex",
+    "pf2e.mks.checkType.will": "Will",
+    "pf2e.mks.checkType.spell[arcane]": "Arcane Spellcasting",
+    "pf2e.mks.checkType.spell[occult]": "Occult Spellcasting",
+    "pf2e.mks.checkType.spell[primal]": "Primal Spellcasting",
+    "pf2e.mks.checkType.spell[divine]": "Divine Spellcasting",
+    "pf2e.mks.checkType.skill[acrobatics]": "Acrobatics",
+    "pf2e.mks.checkType.skill[arcana]": "Arcana",
+    "pf2e.mks.checkType.skill[athletics]": "Athletics",
+    "pf2e.mks.checkType.skill[crafting]": "Crafting",
+    "pf2e.mks.checkType.skill[deception]": "Deception",
+    "pf2e.mks.checkType.skill[diplomacy]": "Diplomacy",
+    "pf2e.mks.checkType.skill[intimidation]": "Intimidation",
+    "pf2e.mks.checkType.skill[medicine]": "Medicine",
+    "pf2e.mks.checkType.skill[nature]": "Nature",
+    "pf2e.mks.checkType.skill[occultism]": "Occultism",
+    "pf2e.mks.checkType.skill[performance]": "Performance",
+    "pf2e.mks.checkType.skill[religion]": "Religion",
+    "pf2e.mks.checkType.skill[society]": "Society",
+    "pf2e.mks.checkType.skill[stealth]": "Stealth",
+    "pf2e.mks.checkType.skill[survival]": "Survival",
+    "pf2e.mks.checkType.skill[thievery]": "Thievery",
+    "pf2e.mks.checkType.strike": "Strike",
+    "pf2e.mks.warning.actor.onemustbeselected": "You must select exactly one actor!",
+    "pf2e.mks.warning.actor.atleastonemustbeselected": "You must select at least one actor!",
+    "pf2e.mks.warning.target.onemustbeselected": "You must target exactly one token!",
+    "pf2e.mks.warning.target.atleastonemustbeselected": "You must target at least one token!",
+    "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+    "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
+    "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
+    "pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+    "pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
+    "pf2e.mks.dialog.aid.ready.title": "Ready Aid Reaction",
+    "pf2e.mks.dialog.aid.ready.select": "Select How To Aid:",
+    "pf2e.mks.dialog.aid.ready.yesaction": "Ready",
+    "pf2e.mks.dialog.setdc.title": "Set DC",
+    "pf2e.mks.dc": "DC"
 }
