--- a/lang/tr.json
+++ b/lang/tr.json
@@ -39,5 +39,6 @@
     "pf2e.mks.dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
     "pf2e.mks.dialog.aid.ready.yesaction": "Hazır",
     "pf2e.mks.dialog.setdc.title": "DC Belirle",
+    "pf2e.mks.dialog.receiveaid.title": "Alacağın Yardımları Seç",
     "pf2e.mks.dc": "DC"
 }
