--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,56 +1,61 @@
 {
-    "PF2E.ActionsCheck.athletics": "Bilek Gücü - Athletics",
-    "PF2E.Actions.Grapple.Title": "Cebelleş",
-    "PF2E.Actions.Seek.Title": "Ara/Tara",
-    "PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
-    "PF2E.ConditionTypeProne": "Yere Düşmüş",
+	"PF2E.Actions.Grapple.Title": "Cebelleş",
+	"PF2E.Actions.Seek.Title": "Ara/Tara",
+	"PF2E.Actions.Aid.Title": "Yardım",
 
-    "pf2e.mks.ui.actions.cancel": "İptal",
-    "pf2e.mks.ui.actions.ok": "Tamam",
-    "pf2e.mks.checkType.perception": "Algılama - Perception",
-    "pf2e.mks.checkType.fortitude": "Direnç - Fortitude",
-    "pf2e.mks.checkType.reflex": "Refleks",
-    "pf2e.mks.checkType.will": "Azim - Will",
-    "pf2e.mks.checkType.spell[arcane]": "Esrar - Arcane Büyü",
-    "pf2e.mks.checkType.spell[occult]": "Kült - Occult Büyü",
-    "pf2e.mks.checkType.spell[primal]": "Özsel - Primal Büyü",
-    "pf2e.mks.checkType.spell[divine]": "Kutsal - Divine Büyü",
-    "pf2e.mks.checkType.skill[acrobatics]": "Akrobasi",
-    "pf2e.mks.checkType.skill[arcana]": "Esrar İlmi - Arcana",
-    "pf2e.mks.checkType.skill[athletics]": "Bilek Gücü - Athletics",
-    "pf2e.mks.checkType.skill[crafting]": "Ustalık - Crafting",
-    "pf2e.mks.checkType.skill[deception]": "Dalavere - Deception",
-    "pf2e.mks.checkType.skill[diplomacy]": "Diplomasi",
-    "pf2e.mks.checkType.skill[intimidation]": "Gözdağı - Intimidation",
-    "pf2e.mks.checkType.skill[medicine]": "Tıp - Medicine",
-    "pf2e.mks.checkType.skill[nature]": "Doğa - Nature",
-    "pf2e.mks.checkType.skill[occultism]": "Kültizm - Occultism",
-    "pf2e.mks.checkType.skill[performance]": "Performans",
-    "pf2e.mks.checkType.skill[religion]": "Dinler - Religion",
-    "pf2e.mks.checkType.skill[society]": "Toplum - Society",
-    "pf2e.mks.checkType.skill[stealth]": "Gizlilik - Stealth",
-    "pf2e.mks.checkType.skill[survival]": "Hayatta Kalma - Survival",
-    "pf2e.mks.checkType.skill[thievery]": "Hırsızlık - Thievery",
-    "pf2e.mks.checkType.strike": "Vuruş",
-    "pf2e.mks.warning.actor.onemustbeselected": "Bir piyon seçmelisiniz!",
-    "pf2e.mks.warning.actor.atleastonemustbeselected": "En az bir piyon seçmelisiniz!",
-    "pf2e.mks.warning.target.onemustbeselected": "Bir piyon hedeflemelisiniz!",
-    "pf2e.mks.warning.target.atleastonemustbeselected": "En az bir piyon hedeflemelisiniz!",
-    "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
-    "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
-    "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Büyü Atağı",
-    "pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
-    "pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
-    "pf2e.mks.dialog.aid.ready.title": "Yardımı Hazırla",
-    "pf2e.mks.dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
-    "pf2e.mks.dialog.aid.ready.yesaction": "Hazır",
-    "pf2e.mks.dialog.setdc.title": "DC Belirle",
-    "pf2e.mks.dialog.receiveaid.title": "Alacağın Yardımları Seç",
-    "pf2e.mks.dialog.grapple.grabbedorprone.title": "Fena Çuvalladınız... ",
-    "pf2e.mks.dialog.grapple.grabbedorprone.select": "Şimdi Ne Olacak ?",
-    "pf2e.mks.dialog.seek.selecttype.title": "Nasıl araştıracaksın ?",
-    "pf2e.mks.dialog.seek.type.frontcone": "Direkt olarak önünü",
-    "pf2e.mks.dialog.seek.type.frontburst": "Önünde bir yerleri",
-    "pf2e.mks.dialog.seek.type.object": "Etrafında bir objeyi, vb.",
-    "pf2e.mks.dc": "DC"
+	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
+	"PF2E.ConditionTypeProne": "Yere Düşmüş",
+	"PF2E.ConditionTypeHidden": "Saklanmış",
+	"PF2E.ConditionTypeUndetected": "Konumu Belirsiz",
+
+	"PF2E.SavesFortitude": "Direnç - Fortitude",
+	"PF2E.SavesReflex": "Refleks",
+	"PF2E.SavesWill": "Azim - Will",
+	"PF2E.ActionsCheck.acrobatics": "Akrobasi",
+	"PF2E.ActionsCheck.arcana": "Esrar İlmi - Arcana",
+	"PF2E.ActionsCheck.athletics": "Bilek Gücü - Athletics",
+	"PF2E.ActionsCheck.crafting": "Ustalık - Crafting",
+	"PF2E.ActionsCheck.deception": "Dalavere - Deception",
+	"PF2E.ActionsCheck.diplomacy": "Diplomasi",
+	"PF2E.ActionsCheck.intimidation": "Gözdağı - Intimidation",
+	"PF2E.ActionsCheck.medicine": "Tıp - Medicine",
+	"PF2E.ActionsCheck.nature": "Doğa - Nature",
+	"PF2E.ActionsCheck.occultism": "Kültizm - Occultism",
+	"PF2E.ActionsCheck.performance": "Performans",
+	"PF2E.ActionsCheck.religion": "Dinler - Religion",
+	"PF2E.ActionsCheck.society": "Toplum - Society",
+	"PF2E.ActionsCheck.stealth": "Gizlilik - Stealth",
+	"PF2E.ActionsCheck.survival": "Hayatta Kalma - Survival",
+	"PF2E.ActionsCheck.thievery": "Hırsızlık - Thievery",
+	"PF2E.ActionsCheck.perception": "Algılama - Perception",
+	"PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
+	"PF2E.MKS.SC.occult": "Kült - Occult Büyü",
+	"PF2E.MKS.SC.primal": "Özsel - Primal Büyü",
+	"PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
+	"PF2E.WeaponStrikeLabel": "Vuruş",
+	"PF2E.MartialUnarmed": "Silahsız",
+
+	"pf2e.mks.ui.actions.cancel": "İptal",
+	"pf2e.mks.ui.actions.ok": "Tamam",
+	"pf2e.mks.warning.actor.onemustbeselected": "Bir piyon seçmelisiniz!",
+	"pf2e.mks.warning.actor.atleastonemustbeselected": "En az bir piyon seçmelisiniz!",
+	"pf2e.mks.warning.target.onemustbeselected": "Bir piyon hedeflemelisiniz!",
+	"pf2e.mks.warning.target.atleastonemustbeselected": "En az bir piyon hedeflemelisiniz!",
+	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
+	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
+	"pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Büyü Atağı",
+	"pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
+	"pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
+	"pf2e.mks.dialog.aid.ready.title": "Yardımı Hazırla",
+	"pf2e.mks.dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
+	"pf2e.mks.dialog.aid.ready.yesaction": "Hazır",
+	"pf2e.mks.dialog.setdc.title": "DC Belirle",
+	"pf2e.mks.dialog.receiveaid.title": "Alacağın Yardımları Seç",
+	"pf2e.mks.dialog.grapple.grabbedorprone.title": "Fena Çuvalladınız... ",
+	"pf2e.mks.dialog.grapple.grabbedorprone.select": "Şimdi Ne Olacak ?",
+	"pf2e.mks.dialog.seek.selecttype.title": "Nasıl araştıracaksın ?",
+	"pf2e.mks.dialog.seek.type.frontcone": "Direkt olarak önünü",
+	"pf2e.mks.dialog.seek.type.frontburst": "Önünde bir yerleri",
+	"pf2e.mks.dialog.seek.type.object": "Etrafında bir objeyi, vb.",
+	"pf2e.mks.dc": "DC"
 }
