--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,11 @@
 {
+    "PF2E.Actions.Aid.Title": "Aid",
+
+    "PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
+    "PF2E.MKS.SC.occult": "Kült - Occult Büyü",
+    "PF2E.MKS.SC.primal": "Özsel - Primal Büyü",
+    "PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
+
     "pf2e.mks.ui.actions.cancel": "Cancel",
     "pf2e.mks.ui.actions.ok": "OK",
     "pf2e.mks.checkType.perception": "Perception",
