--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,7 @@
     "PF2E.MKS.SC.primal": "Özsel - Primal Büyü",
     "PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
 
+    "pf2e.mks.ui.actionspanel.label": "Action Panel",
     "pf2e.mks.ui.actions.cancel": "Cancel",
     "pf2e.mks.ui.actions.ok": "OK",
     "pf2e.mks.checkType.perception": "Perception",
