--- a/lang/tr.json
+++ b/lang/tr.json
@@ -36,6 +36,10 @@
 	"PF2E.WeaponStrikeLabel": "Vuruş",
 	"PF2E.MartialUnarmed": "Silahsız",
 
+  	"PF2E.TabActionsEncounterLabel": "Mücadele",
+  	"PF2E.TabActionsExplorationLabel": "Keşif",
+  	"PF2E.TabActionsDowntimeLabel": "Dinlenme",
+
 	"pf2e.mks.ui.actionspanel.label": "Aksiyonlar",
 	"pf2e.mks.ui.actions.cancel": "İptal",
 	"pf2e.mks.ui.actions.ok": "Tamam",
