Actions Panel impl. cont.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
     "PF2E.Actions.Aid.Title": "Aid",
+    "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
 
     "PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
     "PF2E.MKS.SC.occult": "Kült - Occult Büyü",
