Disarm and raise a shiedl impl.

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -3,6 +3,7 @@
 	"PF2E.Actions.Seek.Title": "Ara/Tara",
 	"PF2E.Actions.Aid.Title": "Yardım Et",
 	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
+	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
 	"PF2E.Actions.RaiseAShield.SingleActionTitle": "Kalkan Kaldır",
 
 	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
@@ -46,6 +47,8 @@
   	"PF2E.ActionTag.hostile": "Düşmanca",
   	"PF2E.ActionTag.basic": "Basit",
 
+	"PF2E.MKS.ActionsPanel.ShowApplicable": "Sadece Uygunlar",
+	"PF2E.MKS.ActionsPanel.InCombatTurn": "Sırasında",
 	"pf2e.mks.ui.actionspanel.label": "Aksiyonlar",
 	"pf2e.mks.ui.actions.cancel": "İptal",
 	"pf2e.mks.ui.actions.ok": "Tamam",
