Escape action impl.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "PF2E.Actions.Escape.Title": "Escape",
     "PF2E.Actions.Aid.Title": "Aid",
     "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
     "PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
