--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
     "PF2E.ActionTag.combat": "Combat",
     "PF2E.ActionTag.hostile": "Hostile",
     "PF2E.ActionTag.basic": "Basic",
+    "PF2E.ActionTag.social": "Social",
     "PF2E.MKS.ActionsPanel.ShowApplicable": "Show Applicable",
     "PF2E.MKS.ActionsPanel.InCombatTurn": "In Combat Turn",
 
@@ -18,30 +19,34 @@
 
     "PF2E.MKS.Modifier.partially-disarmed": "Loose Grip",
 
-    "pf2e.mks.ui.actionspanel.label": "Action Panel",
-    "pf2e.mks.ui.actions.cancel": "Cancel",
-    "pf2e.mks.ui.actions.ok": "OK",
-    "pf2e.mks.warning.actor.onemustbeselected": "You must select exactly one actor!",
-    "pf2e.mks.warning.actor.atleastonemustbeselected": "You must select at least one actor!",
-    "pf2e.mks.warning.target.onemustbeselected": "You must target exactly one token!",
-    "pf2e.mks.warning.target.atleastonemustbeselected": "You must target at least one token!",
+    "PF2E.MKS.UI.ActionsPanel.Label": "Action Panel",
+    "PF2E.MKS.UI.Actions.cancel": "Cancel",
+    "PF2E.MKS.UI.Actions.ok": "OK",
+    "PF2E.MKS.UI.Actions.add": "Add",
+    "PF2E.MKS.Dialog.SelectOne.Title": "Select One",
+    "PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
+    "PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "You must select at least one actor!",
+    "PF2E.MKS.Warning.Target.OneMustBeSelected": "You must target exactly one token!",
+    "PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "You must target at least one token!",
     "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
     "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
     "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
     "pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
     "pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
-    "pf2e.mks.dialog.aid.ready.title": "Ready Aid Reaction",
-    "pf2e.mks.dialog.aid.ready.select": "Select How To Aid:",
-    "pf2e.mks.dialog.aid.ready.yesaction": "Ready",
-    "pf2e.mks.dialog.setdc.title": "Set DC",
-    "pf2e.mks.dialog.receiveaid.title": "Select Aids",
-    "pf2e.mks.dialog.grapple.grabbedorprone.title": "Select a Condition upon Critical Failure",
-    "pf2e.mks.dialog.grapple.grabbedorprone.select": "Grabbed or Prone ?",
-    "pf2e.mks.dialog.seek.selecttype.title": "How do you seek ?",
-    "pf2e.mks.dialog.seek.type.frontcone": "Directly within line of sight",
-    "pf2e.mks.dialog.seek.type.frontburst": "Somewhere within line of sight",
-    "pf2e.mks.dialog.seek.type.object": "Search an object around",
-    "pf2e.mks.dialog.disarm.title": "Disarm",
-    "pf2e.mks.dialog.disarm.select": "Select Weapon or Item",
-    "pf2e.mks.dc": "DC"
+    "PF2E.MKS.Dialog.aid.ready.title": "Ready Aid Reaction",
+    "PF2E.MKS.Dialog.aid.ready.select": "Select How To Aid:",
+    "PF2E.MKS.Dialog.aid.ready.yesaction": "Ready",
+    "PF2E.MKS.Dialog.SetDC.Title": "Set DC",
+    "PF2E.MKS.Dialog.receiveaid.title": "Select Aids",
+    "PF2E.MKS.Dialog.grapple.grabbedorprone.title": "Select a Condition upon Critical Failure",
+    "PF2E.MKS.Dialog.grapple.grabbedorprone.select": "Grabbed or Prone ?",
+    "PF2E.MKS.Dialog.seek.selecttype.title": "How do you seek ?",
+    "PF2E.MKS.Dialog.seek.type.frontcone": "Directly within line of sight",
+    "PF2E.MKS.Dialog.seek.type.frontburst": "Somewhere within line of sight",
+    "PF2E.MKS.Dialog.seek.type.object": "Search an object around",
+    "PF2E.MKS.Dialog.disarm.title": "Disarm",
+    "PF2E.MKS.Dialog.disarm.select": "Select Weapon or Item",
+    "PF2E.MKS.Dialog.Escape.SelectCondition": "Select condition",
+    "PF2E.MKS.Dialog.Escape.SelectSkill": "Select how you escape",
+    "PF2E.MKS.DC": "DC"
 }
