--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,4 +1,11 @@
 {
+	"PF2E.BonusLabel.untyped": "Genel",
+	"PF2E.BonusLabel.status": "Durum",
+	"PF2E.BonusLabel.circumstance": "Koşul",
+	"PF2E.BonusLabel.item": "Item",
+	"PF2E.BonusLabel.ability": "Yetenek",
+	"PF2E.BonusLabel.proficiency": "Ustalık",
+
 	"PF2E.Actions.Grapple.Title": "Cebelleş",
 	"PF2E.Actions.Disarm.Title": "Elinden Düşür",
 	"PF2E.Actions.Shove.Title": "İtekle",
@@ -6,6 +13,7 @@
 	"PF2E.Actions.Seek.Title": "Ara/Tara",
 	"PF2E.Actions.Escape.Title": "Kurtul",
 	"PF2E.Actions.Aid.Title": "Yardım Et",
+	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
 	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
 	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
 	"PF2E.Actions.RaiseAShield.SingleActionTitle": "Kalkan Kaldır",
@@ -50,38 +58,41 @@
   	"PF2E.ActionTag.combat": "Savaş",
   	"PF2E.ActionTag.hostile": "Düşmanca",
   	"PF2E.ActionTag.basic": "Basit",
+  	"PF2E.ActionTag.social": "Sosyal",
 
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
 	"PF2E.MKS.ActionsPanel.InCombatTurn":   "Savaşta Sıradaki",
 
-  	"pf2e.mks.dialog.selectone.title": "Seçiniz",
-  	"pf2e.mks.dialog.selectone.yes": "Tamam",
-	"pf2e.mks.ui.actionspanel.label": "Aksiyonlar",
-	"pf2e.mks.ui.actions.cancel": "İptal",
-	"pf2e.mks.ui.actions.ok": "Tamam",
-	"pf2e.mks.warning.actor.onemustbeselected": "Bir piyon seçmelisiniz!",
-	"pf2e.mks.warning.actor.atleastonemustbeselected": "En az bir piyon seçmelisiniz!",
-	"pf2e.mks.warning.target.onemustbeselected": "Bir piyon hedeflemelisiniz!",
-	"pf2e.mks.warning.target.atleastonemustbeselected": "En az bir piyon hedeflemelisiniz!",
+	"PF2E.MKS.UI.Actions.add": "Ekle",
+	"PF2E.MKS.UI.Actions.ok": "Tamam",
+	"PF2E.MKS.UI.Actions.cancel": "İptal",
+	"PF2E.MKS.Dialog.SelectOne.Title": "Seçiniz",
+	"PF2E.MKS.UI.ActionsPanel.Label": "Aksiyonlar",
+	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "Bir piyon seçmelisiniz!",
+	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "En az bir piyon seçmelisiniz!",
+	"PF2E.MKS.Warning.Target.OneMustBeSelected": "Bir piyon hedeflemelisiniz!",
+	"PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "En az bir piyon hedeflemelisiniz!",
 	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
 	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
 	"pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Büyü Atağı",
 	"pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
 	"pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
-	"pf2e.mks.dialog.aid.ready.title": "Yardımı Hazırla",
-	"pf2e.mks.dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
-	"pf2e.mks.dialog.aid.ready.yesaction": "Hazır",
-	"pf2e.mks.dialog.setdc.title": "DC Belirle",
-	"pf2e.mks.dialog.receiveaid.title": "Alacağın Yardımları Seç",
-	"pf2e.mks.dialog.grapple.grabbedorprone.title": "Fena Çuvalladınız... ",
-	"pf2e.mks.dialog.grapple.grabbedorprone.select": "Şimdi Ne Olacak ?",
-	"pf2e.mks.dialog.seek.selecttype.title": "Nasıl araştıracaksın ?",
-	"pf2e.mks.dialog.seek.type.frontcone": "Direkt olarak önünü",
-	"pf2e.mks.dialog.seek.type.frontburst": "Önünde bir yerleri",
-	"pf2e.mks.dialog.seek.type.object": "Etrafında bir objeyi, vb.",
-  	"pf2e.mks.dialog.disarm.title": "Elinden Düşür",
-  	"pf2e.mks.dialog.disarm.select": "Silah/Item Seçiniz",
-  	"pf2e.mks.dialog.escape.selectcondition": "Kaçmak istediğiniz hali seçiniz",
-  	"pf2e.mks.dialog.escape.selectskill": "Nasıl kaçacaksınız ?",
-	"pf2e.mks.dc": "DC"
+	"PF2E.MKS.Dialog.aid.ready.title": "Yardımı Hazırla",
+	"PF2E.MKS.Dialog.aid.ready.select": "Nasıl Yardım Edeceksin:",
+	"PF2E.MKS.Dialog.aid.ready.yesaction": "Hazır",
+	"PF2E.MKS.Dialog.SetDC.Title": "DC Belirle",
+	"PF2E.MKS.Dialog.receiveaid.title": "Alacağın Yardımları Seç",
+	"PF2E.MKS.Dialog.grapple.grabbedorprone.title": "Fena Çuvalladınız... ",
+	"PF2E.MKS.Dialog.grapple.grabbedorprone.select": "Şimdi Ne Olacak ?",
+	"PF2E.MKS.Dialog.seek.selecttype.title": "Nasıl araştıracaksın ?",
+	"PF2E.MKS.Dialog.seek.type.frontcone": "Direkt olarak önünü",
+	"PF2E.MKS.Dialog.seek.type.frontburst": "Önünde bir yerleri",
+	"PF2E.MKS.Dialog.seek.type.object": "Etrafında bir objeyi, vb.",
+  	"PF2E.MKS.Dialog.disarm.title": "Elinden Düşür",
+  	"PF2E.MKS.Dialog.disarm.select": "Silah/Item Seçiniz",
+  	"PF2E.MKS.Dialog.Escape.SelectCondition": "Kaçmak istediğiniz hali seçiniz",
+  	"PF2E.MKS.Dialog.Escape.SelectSkill": "Nasıl kaçacaksınız ?",
+	"PF2E.MKS.Dialog.AddModifier.Title": "Add Modifier",
+	"PF2E.MKS.Dialog.AddModifier.Label": "",
+	"PF2E.MKS.DC": "DC"
 }
