--- a/lang/tr.json
+++ b/lang/tr.json
@@ -13,6 +13,8 @@
 	"PF2E.Actions.Seek.Title": "Ara/Tara",
 	"PF2E.Actions.Escape.Title": "Kurtul",
 	"PF2E.Actions.Aid.Title": "Yardım Et",
+	"PF2E.Actions.TakeCover.Title": "Siper Al",
+	"PF2E.Actions.GiveCover.Title": "Siper Ver",
 	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
 	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
 	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
@@ -59,6 +61,7 @@
   	"PF2E.ActionTag.hostile": "Düşmanca",
   	"PF2E.ActionTag.basic": "Basit",
   	"PF2E.ActionTag.social": "Sosyal",
+  	"PF2E.ActionTag.stealth": "Gizlilik",
 
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
 	"PF2E.MKS.ActionsPanel.InCombatTurn":   "Savaşta Sıradaki",
