--- a/lang/tr.json
+++ b/lang/tr.json
@@ -15,6 +15,7 @@
 	"PF2E.Actions.Aid.Title": "Yardım Et",
 	"PF2E.Actions.TakeCover.Title": "Siper Al",
 	"PF2E.Actions.GiveCover.Title": "Siper Ver",
+	"PF2E.Actions.Prone.Title": "Yere Yat/Kalk",
 	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
 	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
 	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
