--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,10 @@
     "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
     "PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
     "PF2E.Actions.Prone.Title": "Drop Prone/Stand",
+    "PF2E.Actions.RecallKnowledge.Title": "Recall Knowledge",
+    "PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
+    "PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
+    "PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
 
     "PF2E.ActionTag.situational": "Situational",
     "PF2E.ActionTag.combat": "Combat",
@@ -52,5 +56,6 @@
     "PF2E.MKS.Dialog.disarm.select": "Select Weapon or Item",
     "PF2E.MKS.Dialog.Escape.SelectCondition": "Select condition",
     "PF2E.MKS.Dialog.Escape.SelectSkill": "Select how you escape",
+    "PF2E.MKS.Dialog.RecallKnowledge.SelectSkill": "Select how you recall",
     "PF2E.MKS.DC": "DC"
 }
